gccida/c3/expand_inc
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inc/src/expmed.c:2343:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)target + 2), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_inc/src/obj/expmed.o] Error 1
